Remove RELATE from homepage.

--- a/course/templates/course/home.html
+++ b/course/templates/course/home.html
@@ -3,12 +3,7 @@
 
 {% block content %}
   <div class="jumbotron">
-    {% trans "RELATE" as RELATE %}
-    <h1>{% blocktrans %} Welcome to {{ RELATE }} {% endblocktrans %}</h1>
-    <p>{% trans "RELATE is an Environment for Learning And TEaching" %}</p>
-    <p>
-    <a class="btn btn-lg btn-primary" href="https://github.com/inducer/relate" role="button">{% trans "Learn more" %} &raquo;</a>
-    </p>
+    <h1>{% blocktrans %}Welcome to MyLabManual.com{% endblocktrans %}</h1>
   </div>
 
   {% if current_courses or past_courses %}
