--- a/course/templates/course/analytics-flow.html
+++ b/course/templates/course/analytics-flow.html
@@ -2,7 +2,7 @@
 {% load i18n %}
 
 {% block title %}
-  {% trans "Analytics" %} - {% trans "RELATE" %}
+  {% trans "Analytics" %} - {{ site.name }}
 {% endblock %}
 
 {% block content %}
