--- a/course/templates/course/calendar.html
+++ b/course/templates/course/calendar.html
@@ -5,7 +5,7 @@
 
 {% block title %}
   {{ course.number}}
-  {% trans "Calendar" %} - {% trans "RELATE" %}
+  {% trans "Calendar" %} - {{ site.name }}
 {% endblock %}
 
 {%block header_extra %}
