--- a/course/templates/course/course-base.html
+++ b/course/templates/course/course-base.html
@@ -5,7 +5,7 @@
   {{ course.number}}:
   {{ course.time_period}}
   -
-  {% trans "RELATE" %}
+  {{ site.name }}
 {% endblock %}
 
 {% block brand %}
