--- a/course/templates/course/flow-confirm-completion.html
+++ b/course/templates/course/flow-confirm-completion.html
@@ -3,7 +3,7 @@
 {% load i18n %}
 
 {% block title %}
-  {{flow_desc.title}} - {% trans "RELATE" %}
+  {{flow_desc.title}} - {{ site.name }}
 {% endblock %}
 
 {% block content %}
