--- a/course/templates/course/flow-start.html
+++ b/course/templates/course/flow-start.html
@@ -3,7 +3,7 @@
 
 
 {% block title %}
-  {{flow_desc.title}} - {% trans "RELATE" %}
+  {{flow_desc.title}} - {{ site.name }}
 {% endblock %}
 
 {% block content %}
