--- a/course/templates/course/gradebook-by-opp.html
+++ b/course/templates/course/gradebook-by-opp.html
@@ -5,7 +5,7 @@
 {% load static %}
 
 {% block title %}
-  {% trans "Grade book" %}: {{ opportunity.name }} - {% trans "RELATE" %}
+  {% trans "Grade book" %}: {{ opportunity.name }} - {{ site.name }}
 {% endblock %}
 
 {% block header_extra %}
