--- a/course/templates/course/gradebook-opp-list.html
+++ b/course/templates/course/gradebook-opp-list.html
@@ -5,7 +5,7 @@
 {% load static %}
 
 {% block title %}
-  {% trans "List of Grading Opportunities" %} - {% trans "RELATE" %}
+  {% trans "List of Grading Opportunities" %} - {{ site.name }}
 {% endblock %}
 
 {% block header_extra %}
