--- a/course/templates/course/gradebook-participant-list.html
+++ b/course/templates/course/gradebook-participant-list.html
@@ -4,7 +4,7 @@
 {% load static %}
 
 {% block title %}
-  {% trans "List of Participants" %} - {% trans "RELATE" %}
+  {% trans "List of Participants" %} - {{ site.name }}
 {% endblock %}
 
 {% block header_extra %}
