--- a/course/templates/course/gradebook.html
+++ b/course/templates/course/gradebook.html
@@ -2,7 +2,7 @@
 {% load i18n %}
 
 {% block title %}
-  {% trans "Grade book" %} - {% trans "RELATE" %}
+  {% trans "Grade book" %} - {{ site.name }}
 {% endblock %}
 
 {% block header_extra %}
