--- a/course/templates/course/home.html
+++ b/course/templates/course/home.html
@@ -3,7 +3,7 @@
 
 {% block content %}
   <div class="jumbotron">
-    <h1>{% blocktrans %}Welcome to MyLabManual.com{% endblocktrans %}</h1>
+    <h1>{% blocktrans with site_name=site.name %}Welcome to {{ site_name }}{% endblocktrans %}</h1>
   </div>
 
   {% if current_courses or past_courses %}
@@ -42,8 +42,7 @@
       </table>
     {% endif %}
   {% else %}
-    {% trans "RELATE" as RELATE %}
-    {% blocktrans trimmed %} There are no courses hosted on this {{ RELATE }} site. {% endblocktrans %}
+    {% blocktrans trimmed with site_name=site.name %} There are no courses hosted on this {{ site_name }} site.{% endblocktrans %}
     {% if not user.is_authenticated %}
       {% url "relate-sign_in_by_user_pw" as relate-sign_in_by_user_pw %}
       {% blocktrans trimmed %}
