--- a/course/templates/course/login.html
+++ b/course/templates/course/login.html
@@ -9,8 +9,8 @@
   <div class="alert alert-info">
     <i class="fa fa-chevron-left"></i>
     {% url "relate-sign_in_choice" as relate-sign_in_choice %}
-    {% blocktrans trimmed %}
-      If you cannot or would not like to sign in using a RELATE-specific
+    {% blocktrans trimmed with site_name=site.name %}
+      If you cannot or would not like to sign in using a {{ site_name }}-specific
       user name or password,
       <a href='{{ relate-sign_in_choice }}{{next_uri}}'>please choose a different method to sign in</a>.
     {% endblocktrans %}
