--- a/course/templates/course/query-participations.html
+++ b/course/templates/course/query-participations.html
@@ -4,7 +4,7 @@
 {% load crispy_forms_tags %}
 
 {% block title %}
-  {% trans "Query Participations" %} - {% trans "RELATE" %}
+  {% trans "Query Participations" %} - {{ site.name }}
 {% endblock %}
 
 {% block header_extra %}
