--- a/course/templates/course/static-page.html
+++ b/course/templates/course/static-page.html
@@ -2,7 +2,7 @@
 {% load i18n %}
 
 {% block page_navbar %}
-  <li class="dropdown">
+  {% comment %}<li class="dropdown">
     <a href="#" class="dropdown-toggle" data-toggle="dropdown">{% trans "Jump to" %}<b class="caret"></b></a>
     <ul class="dropdown-menu">
     {% for chunk in chunks %}
@@ -11,7 +11,7 @@
       {% endif %}
     {% endfor %}
     </ul>
-  </li>
+  </li>{% endcomment %}
 {% endblock %}
 
 {% block content %}
