--- a/relate/templates/base.html
+++ b/relate/templates/base.html
@@ -61,7 +61,7 @@
 
             {%block navbar %}{% endblock %}
 
-            {% if user.is_staff or currently_impersonating or perms.course.can_issue_exam_tickets or pperm.impersonate_role or pperm.set_fake_time or pperm.set_pretend_facility %}
+            {% comment %}{% if user.is_staff or currently_impersonating or perms.course.can_issue_exam_tickets or pperm.impersonate_role or pperm.set_fake_time or pperm.set_pretend_facility %}
             <li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown">{% trans "Staff" %}<b class="caret"></b></a>
               <ul class="dropdown-menu">
@@ -91,7 +91,7 @@
                 {% endif %}
               </ul>
             </li>
-            {% endif %}
+            {% endif %}{% endcomment %}
           </ul>
           <ul class="nav navbar-nav navbar-right">
             {% block preview_status %}
