--- a/course/templates/course/gradebook-participant-list.html
+++ b/course/templates/course/gradebook-participant-list.html
@@ -14,7 +14,7 @@
 {% block content %}
   <h1>{% trans "List of Participants" %}</h1>
 
-  <a href="{% url "relate-edit_participation" course.identifier -1 %}" class="btn btn-default">{% trans "Add participant" %}</a>
+  {% comment %}<a href="{% url "relate-edit_participation" course.identifier -1 %}" class="btn btn-default">{% trans "Add participant" %}</a>{% endcomment %}
 
   {% include "course/participation-table.html" with participations=participations %}
 
