--- a/course/templates/course/home.html
+++ b/course/templates/course/home.html
@@ -44,9 +44,9 @@
   {% else %}
     {% blocktrans trimmed with site_name=site.name %} There are no courses hosted on this {{ site_name }} site.{% endblocktrans %}
     {% if not user.is_authenticated %}
-      {% url "relate-sign_in_by_user_pw" as relate-sign_in_by_user_pw %}
+      {% url "relate-sign_in_choice" as relate-sign_in_choice %}
       {% blocktrans trimmed %}
-        <a href="{{ relate-sign_in_by_user_pw }}">Sign in</a> to get started.
+        <a href="{{ relate-sign_in_choice }}">Sign in</a> to get started.
       {% endblocktrans %}
     {% endif %}
   {% endif %}
