Grade book defaults to 25 rows.

--- a/course/templates/course/gradebook.html
+++ b/course/templates/course/gradebook.html
@@ -76,6 +76,7 @@
         "scrollCollapse": true,
         "paging": true,
         "ordering": true,
+        "pageLength": 25,
         "columnDefs": [{ type: 'name', targets: 1 }],
         "language": {url: '{% static "datatables-i18n/i18n/" %}{{LANG}}.json'},
     } );
