--- a/relate/templates/base.html
+++ b/relate/templates/base.html
@@ -16,6 +16,7 @@
     <link rel="stylesheet" href="{% static "font-awesome/css/font-awesome.css" %}">
     <link rel="stylesheet" href="{% static "jstree/dist/themes/default/style.min.css" %}" />
     <link rel="stylesheet" href="/static/css/style.css" >
+    <style type="text/css"> @media print { body { display:none } } </style>
 
     {# Don't be tempted to move all this JS stuff down to the end. #}
     {# The datepicker generates inline JS that relies on this being loaded. #}
